# genkit

./: .gitignore  README.md  captainhook.json  package.json  pnpm-lock.yaml
py/: README.md  RELEASE_NOTES_v0.8.0.md  justfile  noxfile.py  pyproject.toml  uv.toml  valkey-sample.py
py/docs/: index.md  release_playbook.md
py/docs/rfcs/: genkit_vs_pydantic_ai_model_typing.md  model-config-part1-examples.md  model-config-part2-overloads.md  model-config-part3-codegen.md  typed-model-config.md
py/plugins/amazon-bedrock/: README.md  pyproject.toml
py/plugins/amazon-bedrock/tests/: model_info_test.py  plugin_test.py
py/plugins/anthropic/: models.yaml  pyproject.toml
py/plugins/anthropic/tests/: anthropic_models_test.py  anthropic_plugin_test.py
py/plugins/compat-oai/: models.yaml  pyproject.toml
py/plugins/compat-oai/tests/: compat_oai_model_test.py  compat_oai_utils_test.py  conftest.py
py/plugins/django/: README.md  pyproject.toml
py/plugins/django/tests/: django_exports_test.py  django_handler_test.py  django_test.py
py/plugins/evaluators/: README.md  pyproject.toml
py/plugins/evaluators/tests/: evaluators_test.py
py/plugins/fastapi/: README.md  pyproject.toml
py/plugins/fastapi/tests/: agent_handler_test.py  fastapi_test.py
py/plugins/flask/: pyproject.toml
py/plugins/google-cloud/: pyproject.toml
py/plugins/google-cloud/tests/: gcp_firestore_session_stores_test.py
py/plugins/google-genai/: models.yaml  pyproject.toml
py/plugins/google-genai/test/: google_plugin_test.py  tuned_gemini_test.py
py/plugins/google-genai/tests/: google_genai_plugin_test.py  veo_test.py
py/plugins/middleware/: README.md  pyproject.toml
py/plugins/middleware/tests/: artifacts_test.py  conftest.py  fallback_test.py  filesystem_test.py  retry_test.py  skills_test.py  test_fallback.py  test_retry.py  test_skills.py  test_tool_approval.py  tool_approval_test.py
py/plugins/ollama/: CHANGELOG.md  README.md  models.yaml  pyproject.toml
py/plugins/ollama/tests/: conftest.py  live_integration_test.py  ollama_converters_test.py  plugin_api_test.py
py/plugins/valkey/: README.md  pyproject.toml
py/plugins/valkey/tests/: test_plugin_unit.py  test_utils.py  test_valkey.py
py/plugins/vertex-ai/: models.yaml  pyproject.toml
py/samples/: README.md
py/samples/agents/: README.md  WEBSOCKET_BIDI_RFC.md  WIRE_PROTOCOL.md  pyproject.toml  pyrightconfig.json
py/samples/agents/basic/: 01_define_agent_with_store.py  02_define_agent_no_store.py  03_interrupt_resume_with_store.py  04_interrupt_resume_no_store.py  05_define_prompt_agent.py  06_define_custom_agent.py  07_artifacts_custom_patch.py  08_graceful_failure.py  09_detach.py  10_abort.py  11_write_artifact_tool.py  12_abort_client_and_server.py  13_deadline_timeout.py  14_abort_failure_store_drift.py  15_branching.py  16_time_travel_artifacts.py  17_client_transform.py
py/samples/agents/basic_examples/: 01_define_agent_with_store.py  02_define_agent_no_store.py  03_interrupt_resume_with_store.py  04_interrupt_resume_no_store.py  05_define_prompt_agent.py  06_define_custom_agent.py  07_artifacts_custom_patch.py  08_graceful_failure.py  08_smooth_preemption_poc.py  09_detach.py  10_abort.py  11_write_artifact_tool.py  12_abort_client_and_server.py  12_firestore_session_store.py  13_deadline_timeout.py  14_abort_failure_store_drift.py
py/samples/agents/branching_examples/: 01_fork_sibling_snapshots.py  02_regenerate_alternate.py  03_parallel_explore.py  04_continue_active_branch.py  05_time_travel_artifacts.py  06_parallel_deep_research.py  README.md  _helpers.py
py/samples/agents/src/: main.py  verify.py
py/samples/agents/testapp/: README.md  _ai.py  background_agent.py  branching_agent.py  coding_agent.py  file_store_agent.py  orchestrator_agent.py  research_agent.py  server.py  task_agent.py  trip_planner_agent.py  weather_agent.py  workspace_agent.py
py/samples/agents/testapps/: README.md  _ai.py  banking_agent.py  client_state_agent.py  file_store_agent.py  server.py  task_agent.py  weather_agent.py  workspace_agent.py
py/samples/anthropic-sample/: README.md  pyproject.toml
py/samples/anthropic-sample/src/: main.py
py/samples/basic-flows/: README.md  pyproject.toml
py/samples/basic-flows/src/: main.py
py/samples/context/: pyproject.toml
py/samples/context/src/: main.py
py/samples/django-hello/: README.md  manage.py  pyproject.toml
py/samples/django-hello/myproject/: asgi.py  settings.py  urls.py
py/samples/django-hello/recipes/: apps.py  views.py
py/samples/evaluators/: pyproject.toml
py/samples/evaluators/src/: main.py
py/samples/fastapi-bugbot/: pyproject.toml
py/samples/fastapi-bugbot/src/: main.py
py/samples/flask-hello/: pyproject.toml
py/samples/flask-hello/src/: main.py
py/samples/flow-sample1/: README.md  pyproject.toml
py/samples/flow-sample1/src/: main.py
py/samples/gemini-agent-fastapi/: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  llms-full.txt  pyproject.toml
py/samples/gemini-code-execution/: pyproject.toml
py/samples/gemini-context-caching/: pyproject.toml
py/samples/google-genai-deep-research/: README.md  pyproject.toml
py/samples/google-genai-media/: README.md  pyproject.toml
py/samples/middleware/: README.md  pyproject.toml
py/samples/middleware-coding-agent/: .gitignore  README.md  pyproject.toml
py/samples/ollama/: README.md
py/samples/ollama-sample/: README.md  pyproject.toml
py/samples/output-formats/: pyproject.toml
py/samples/prompts/: pyproject.toml
py/samples/tool-interrupts/: pyproject.toml
py/samples/tracing/: pyproject.toml
py/samples/valkey/: README.md  pyproject.toml
py/samples/vertexai-imagen/: pyproject.toml
py/scripts/: _common.sh  bump_version  check_consistency.py  create_release  generate_schema_typing  publish_tombstones.py  run_python_security_checks  schema_to_typing.py
py/tests/: tombstone_test.py
py/tests/smoke/: package_test.py
py/tools/: generate_config_dicts.py  generate_model_config_types.py
py/tools/schema_to_typing/: schema_to_typing.py
(+1286 files in other folders)
