# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
authors = [{ name = "Google" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "pydantic>=2.10.5",
  "partial-json-parser>=0.2.1.1.post5",
  "json5>=0.10.0",
  "structlog>=25.2.0",
  "rich>=13.0.0",
  "asgiref>=3.8.1",
  "httpx>=0.28.1",
  "psutil>=7.0.0",
  "starlette>=0.46.1",
  "python-multipart>=0.0.22",
  "sse-starlette>=2.2.1",
  "pillow>=12.1.1",
  "typing_extensions>=4.0",
  "strenum>=0.4.15; python_version < '3.11'",
  "dotpromptz>=0.1.5",
  "uvicorn>=0.34.0",
  "uvloop>=0.21.0; sys_platform != 'win32'",
  "anyio>=4.9.0",
  "opentelemetry-instrumentation-logging>=0.60b1",
  "websockets>=15.0",
]
description = "Genkit AI Framework"
keywords = [
  "genkit",
  "ai",
  "llm",
  "machine-learning",
  "artificial-intelligence",
  "generative-ai",
  "framework",
  "sdk",
]
license = "Apache-2.0"
name = "genkit"
readme = "README-pypi.md"
requires-python = ">=3.10"
version = "0.5.2"

[project.optional-dependencies]
flask        = ["genkit-plugin-flask"]
google-cloud = ["genkit-plugin-google-cloud"]
google-genai = ["genkit-plugin-google-genai"]
ollama       = ["genkit-plugin-ollama"]
openai       = ["genkit-plugin-compat-oai"]
vertex-ai    = ["genkit-plugin-vertex-ai"]

[project.urls]
"Bug Tracker"   = "https://github.com/genkit-ai/genkit/issues"
"Changelog"     = "https://github.com/genkit-ai/genkit/blob/main/py/CHANGELOG.md"
"Documentation" = "https://firebase.google.com/docs/genkit"
"Homepage"      = "https://github.com/genkit-ai/genkit"
"Repository"    = "https://github.com/genkit-ai/genkit/tree/main/py"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

# The core genkit wheel ships only the framework. Plugin sub-packages
# (genkit.plugins.<name>) live in this same source tree for IDE
# resolution but build into their own wheels via per-plugin pyproject.toml
# files; the exclude below keeps them out of the core wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/genkit"]
exclude  = ["src/genkit/plugins/*/**"]

[dependency-groups]
dev = [
  "bpython>=0.25",
  "ipython~=8.22; python_version <= '3.10'",
  "ipython~=9.0.2; python_version >= '3.11'",
  "jupyter>=1.1.1",
  "pytest-asyncio>=0.25.3",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "datamodel-code-generator>=0.27.3",
  "pytest-watcher>=0.4.3",
  "pytest-mock>=3.14.0",
  "twine>=6.1.0",
  "poethepoet>=0.33.1",
  "pip>=25.0.1",
  "tox>=4.25.0",
  "tox-uv>=1.25.0",
  "nox>=2025.2.9",
  "nox-uv>=0.2.2",
  # Internal tooling for workspace-wide checks and samples; not shipped
  # with any published wheel.
  "liccheck>=0.9.2",
  "setuptools>=75.0.0,<82",                   # Required by liccheck (pkg_resources)
  "mcp>=1.25.0",
]

# Monorepo dev convenience: pull every in-tree plugin wheel into the dev
# environment so a fresh `uv sync` mirrors what `pip install genkit
# genkit-plugin-*` would give an app developer. End users install plugins
# via the `[project.optional-dependencies]` extras above (or directly).
plugins = [
  "genkit-plugin-anthropic",
  "genkit-plugin-compat-oai",
  "genkit-plugin-evaluators",
  "genkit-plugin-fastapi",
  "genkit-plugin-flask",
  "genkit-plugin-google-cloud",
  "genkit-plugin-google-genai",
  "genkit-plugin-ollama",
  "genkit-plugin-vertex-ai",
]

lint = [
  "bandit>=1.7.0",
  "deptry>=0.22.0",
  "litestar>=2.20.0",         # For web/typing.py type resolution
  "mypy>=1.14.0",
  "pip-audit>=2.7.0",
  "pypdf>=6.7.5",
  "pyrefly>=0.15.0",
  "pyright>=1.1.392",
  "pysentry-rs>=0.3.14",
  "ruff>=0.9",
  "strenum>=0.4.15",
  "streamlit>=1.41.0",
  "ty>=0.0.1",
  "typos>=1.42.0",
  "fastapi>=0.115.0",
  "grpcio>=1.68.0",
  "grpcio-reflection>=1.68.0",
  "gunicorn>=22.0.0",
  "hypercorn>=0.17.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "opentelemetry-instrumentation-asgi>=0.41b0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-instrumentation-grpc>=0.41b0",
  "quart>=0.19.0",
  "secure>=1.0.0",
  "sentry-sdk>=2.0.0",
  "structlog>=24.0.0",
]

# Pytest for unit testing and coverage.
[tool.pytest]

[tool.pytest.ini_options]
addopts = [
  "--cov",
  #"--cov-report=", # Disable terminal report generation by pytest-cov
  "-ra",
  "-vv",
  "--ignore=testapps",
  "--import-mode=importlib",
]
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    # Pydantic warns when a field named 'schema' shadows BaseModel.schema()
    # We intentionally use 'schema' to match the JSON schema spec.
    "ignore:Field name .schema. in .* shadows an attribute in parent .BaseModel.:UserWarning",
    # dotpromptz uses the same pattern; not our code, suppress it too.
    "ignore:Field name .schema. in .Prompt.*Config. shadows:UserWarning",
]
norecursedirs = ["testapps", ".git", ".tox", ".nox", ".venv", "build", "dist"]
python_files = ["*_test.py"]
pythonpath = [".", "src"]
testpaths = ["tests", "samples", "tools"]
#asyncio_mode = "auto"
asyncio_mode = "strict"

[tool.coverage.report]
fail_under = 78

[tool.coverage.run]
omit = [
  "**/__init__.py",  # Often contains just imports
  "**/_testing.py",  # Internal test utilities
  "**/constants.py", # Typically just constants
  "**/typing.py",    # Often auto-generated or complex types
  "**/types.py",     # Often auto-generated or complex types
]
source = ["src/genkit"]

# uv based package management.
[tool.uv]
default-groups = ["dev", "lint", "plugins"]
override-dependencies = ["werkzeug>=3.1.6"]

[tool.uv.sources]
# Samples (alphabetical by package name from pyproject.toml)
context              = { workspace = true }
dynamic-tools        = { workspace = true }
evaluators           = { workspace = true }
fastapi-bugbot       = { workspace = true }
flask-hello          = { workspace = true }
gemini-code-execution = { workspace = true }
gemini-context-caching = { workspace = true }
google-genai-media   = { workspace = true }
middleware           = { workspace = true }
output-formats       = { workspace = true }
prompts              = { workspace = true }
tool-interrupts      = { workspace = true }
tracing              = { workspace = true }
vertexai-imagen      = { workspace = true }

# Core package (workspace root resolves to itself for member dependencies)
genkit = { workspace = true }
# Plugins (alphabetical)
genkit-plugin-anthropic             = { workspace = true }
genkit-plugin-compat-oai            = { workspace = true }
genkit-plugin-fastapi               = { workspace = true }
genkit-plugin-flask                 = { workspace = true }
genkit-plugin-google-cloud          = { workspace = true }
genkit-plugin-google-genai          = { workspace = true }
genkit-plugin-ollama                = { workspace = true }
genkit-plugin-evaluators            = { workspace = true }
genkit-plugin-vertex-ai             = { workspace = true }
[tool.uv.workspace]
exclude = ["*/shared", "testapps/*"]
# Plugins live inside the core genkit source tree (src/genkit/plugins/<name>/)
# so static analyzers resolve `genkit.plugins.<name>` from a single
# directory. Each plugin is still its own wheel with its own pyproject.toml;
# only the on-disk layout changed.
members = [
  "src/genkit/plugins/*",
  "samples/*",
]


# Ruff checks and formatting.
[tool.ruff]
exclude = [
  "src/genkit/_core/_typing.py",  # Generated by generate_schema_typing
  "tools/schema_to_typing",  # Internal generator script
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "bazel-*",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]
indent-width = 4
line-length = 120
preview = true
target-version = "py310"
unsafe-fixes = true


[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "S101", # assert used - we use assert for type narrowing and tests
  "S105", # hardcoded password string - false positives in tests
  "S106", # hardcoded password func arg - false positives in tests
  "S311", # random not for security - we don't use random for crypto
]
select = [
  "E",     # pycodestyle (errors)
  "W",     # pycodestyle (warnings)
  "F",     # pyflakes
  "I",     # isort (import sorting)
  "UP",    # pyupgrade (Python version upgrades)
  "B",     # flake8-bugbear (common bugs)
  "N",     # pep8-naming (naming conventions)
  "D",     # pydocstyle
  "ANN",   # flake8-annotations (type hints)
  "F401",  # unused imports
  "F403",  # wildcard imports
  "F841",  # unused variables
  "S",     # flake8-bandit (security)
  "ASYNC", # flake8-async (async best practices)
  "T20",   # flake8-print (no print statements)
  # TODO(https://github.com/genkit-ai/genkit/issues/4398): Enable PLC0415 after
  # completing cleanup of remaining in-function imports in core framework.
  # "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
# Auto-generated file from schema
"src/genkit/_core/_typing.py" = ["E501"]
# Base model uses **kwargs: Any to match pydantic signatures
"src/genkit/_core/_base.py" = ["ANN401"]
# HTTP client uses **httpx_kwargs: Any to forward arbitrary options
"src/genkit/_core/_http_client.py" = ["ANN401"]
# Span wrapper uses __getattr__ -> Any for dynamic delegation
"src/genkit/_core/trace/_adjusting_exporter.py" = ["ANN401"]
# Re-export modules (F401 would flag imports used only for re-export)
"src/genkit/_ai/__init__.py" = ["F401"]
"src/genkit/_ai/_document.py" = ["F401"]
"src/genkit/_ai/_model.py" = ["F401"]
"src/genkit/_ai/_formats/__init__.py" = ["F401"]
"src/genkit/_core/trace/__init__.py" = ["F401"]
# Test files don't need docstrings; test method names are self-documenting
"**/tests/**/*.py" = ["D", "ANN401"]
"tests/typing/*.py" = ["D", "F821", "F841", "B018", "ANN"]
# Validation/provenance/safe-defaults test methods are self-documenting via names;
# S108 false positives on Path('/tmp/x') used as dummy non-existent paths in tests.
# Samples have install_rich_traceback() call after imports, before other code
# Samples are demo code and can use blocking I/O for simplicity
"samples/*/*.py"     = ["ANN", "D", "E402", "ASYNC", "T201"]
"samples/*/**/*.py"  = ["ANN", "D", "E402", "ASYNC", "T201"]
"samples/*/src/*.py" = ["ANN", "D", "E402", "ASYNC", "T201"]


[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["genkit"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format      = true
docstring-code-line-length = 120
indent-style               = "space"
line-ending                = "lf"
quote-style                = "single"
skip-magic-trailing-comma  = false

[tool.datamodel-codegen]
#collapse-root-models = true # Don't use; produces Any as types.
#strict-types = ["str", "int", "float", "bool", "bytes"] # Don't use; produces StrictStr, StrictInt, etc.
#use-subclass-enum        = true
base-class               = "genkit._core._base.GenkitModel"
capitalize-enum-members  = true
disable-timestamp        = true
enable-version-header    = true
field-constraints        = true
input                    = "../genkit-tools/genkit-schema.json"
input-file-type          = "jsonschema"
output                   = "src/genkit/_core/_typing.py"
output-model-type        = "pydantic_v2.BaseModel"
snake-case-field         = true
strict-nullable          = true
target-python-version    = "3.11"
use-default              = false
use-schema-description   = true
use-standard-collections = true
use-subclass-enum        = true
use-union-operator       = true
use-unique-items-as-set  = true


[tool.liccheck]
authorized_licenses = [
  "3-clause bsd",
  "apache 2.0",
  "apache software license",
  "apache software",
  "apache",
  "apache-2.0",
  "bsd license",
  "bsd-3-clause",
  "bsd",
  "cmu license (mit-cmu)",
  "isc license (iscl)",
  "isc license",
  "mit license",
  "mit",
  "mit-cmu",
  "new bsd license",
  "new bsd",
  "psf-2.0",
  "python software foundation license",
  "simplified bsd",
  "the unlicense (unlicense)",          # TODO: verify.
  "bsd-2-clause",
  "apache license 2.0",
  "apache-2.0 and mit",
  "mpl-2.0 and mit",                    # tqdm uses this dual license
]
dependencies = true
unauthorized_licenses = [
  "gnu lgpl",
  "gpl v3",
  "lgpl with exceptions or zpl",
  "zpl 2.1",
  "mpl",
]

[tool.liccheck.authorized_packages]
aiohappyeyeballs      = "2.6.1"    # Python Software Foundation (transitive dep of xai-sdk)
aiohttp               = "3.13.3"   # Apache-2.0 AND MIT (transitive dep of xai-sdk)
certifi               = "2026.1.4" # TODO: Verify.
dependencies          = true
dotpromptz-handlebars = "0.1.8"    # Apache-2.0 "https://github.com/google/dotprompt/blob/main/LICENSE"
google-crc32c         = "1.8.0"    # Apache-2.0
mistralai             = ">=1.9.11" # Apache-2.0 "https://github.com/mistralai/client-python/blob/main/LICENSE"
multidict             = "6.7.0"    # Apache-2.0
ollama                = "0.5.1"    # MIT "https://github.com/ollama/ollama-python/blob/main/LICENSE"
pyasn1                = "0.6.2"    # BSD-2-Clause

# Ty (Astral/Ruff) type checking configuration.
# See: https://docs.astral.sh/ty/modules/#first-party-modules
[tool.ty.src]
# Auto-generated protobuf stubs use grpc.experimental implicit submodule
# access that ty warns about. We can't modify generated code.
exclude = [
  "**/generated",
]

[tool.ty.environment]
root = [
  # Core package (plugins live under src/genkit/plugins/<name>/)
  "src",
  ".",  # For samples.shared and other root-level imports
]

# Pyright type checking configuration.
[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".nox",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  "build",
  "dist",
]
# A single entry covers everything: plugin sources live under
# src/genkit/plugins/<name>/ alongside the rest of the genkit package,
# so static analyzers walk one tree.
extraPaths = ["src"]
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

# Pyrefly type checking configuration (Meta's new type checker).
#
# Plugins live in the core genkit source tree (src/genkit/plugins/<name>/)
# as regular subpackages, so static analyzers resolve them from a single
# tree without any namespace-package gymnastics.
[tool.pyrefly]
project_excludes = [
  "**/__pycache__",
  ".git",
  ".mypy_cache",
  ".nox",
  ".pytest_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "build",
  "dist",
  "testapps",
]
project_includes = [
  "src/**/*.py",
  "tests/**/*.py",
  "samples/*/src/**/*.py",
  "samples/*/tests/**/*.py",
]

search-path    = ["."]
python_version = "3.10"

# Treat warnings as errors.
[tool.pyrefly.errors]
deprecated     = "error"
redundant-cast = "error"

# Downgrade unused-type-ignore to avoid noise from comments pyright needs but ty doesn't.
[tool.ty.rules]
unused-type-ignore-comment = "ignore"

# Relax invalid-argument-type in tests: config=dict is common, ModelRequest validates at runtime.
[[tool.ty.overrides]]
include = ["**/tests/**", "**/*_test.py", "samples/**", "tools/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
no-matching-overload = "ignore"

# Vertex AI model_garden has relative imports ty struggles to resolve (PEP 420 / namespace).
[[tool.ty.overrides]]
include = ["src/genkit/plugins/vertex_ai/**"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

# genkit._ai._formats._schema: dict.get with str keys from JSON schema traversal.
[[tool.ty.overrides]]
include = ["src/genkit/_ai/_formats/_schema.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
