# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-plugin-google-genai",
  "genkit-plugin-middleware",
  "genkit-plugin-fastapi",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.24.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.5",
]

[tool.uv]
# These samples are runnable scripts, not an importable library — `uv run basic/...`
# just needs the dependency set resolved, there's nothing to build or install. (The
# other samples ship a src/ package and keep a build backend; this one lays its
# scripts out under basic/ and testapps/ instead.)
package = false

