[project]
name = "anthropic-sample"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "genkit",
  "genkit-anthropic",
  "pydantic>=2.10.5",
  "structlog>=25.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
