[project]
name = "django-hello"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "django>=5.2.15",
  "uvicorn",
  "genkit",
  "genkit-django",
  "genkit-google-genai",
  "pydantic",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["myproject", "recipes"]
